Resolve "Fix ZODIAC crashing with corrupted compounds"